[metadata]
name = colcon-ros-bazel
version = attr: colcon_ros_bazel.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-ros-bazel/milestones?state=closed
    GitHub = https://github.com/colcon/colcon-ros-bazel/
author = Mickael Gaillard
author_email = mick.gaillard@gmail.com
maintainer = Mickael Gaillard
maintainer_email = mick.gaillard@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to support ROS2 Bazel packages.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = colcon

[options]
python_requires = >=3.6
install_requires =
  colcon-core
  colcon-bazel>=0.1.0
  # to set an environment variable when a package installs a library
  colcon-library-path
  colcon-ros>=0.3.2
packages = find:
zip_safe = true

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-asyncio
  pytest-cov
  scspell3k>=2.2

[tool:pytest]
junit_suite_name = colcon-ros-bazel

[options.entry_points]
colcon_argcomplete.argcomplete_completer =
    ros.bazel_args = colcon_ros_bazel.argcomplete_completer.ros_bazel_args:RosBazelArgcompleteCompleter
colcon_core.environment_variable =
    ros.bazel_command = colcon_ros_bazel.task.ros_bazel:BAZEL_COMMAND_ENVIRONMENT_VARIABLE
    ros.bazel_home = colcon_ros_bazel.task.ros_bazel:BAZEL_HOME_ENVIRONMENT_VARIABLE
colcon_core.package_identification =
    ros.bazel = colcon_ros_bazel.package_identification.ros_bazel:RosBazelPackageIdentification
colcon_core.task.build =
    ros.bazel = colcon_ros_bazel.task.ros_bazel.build:RosBazelBuildTask
colcon_core.task.test =
    ros.bazel = colcon_ros_bazel.task.ros_bazel.test:RosBazelTestTask

[flake8]
import-order-style = google

[coverage:run]
source = colcon_ros_bazel
